--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
   "author": "Tri Nguyen",
   "license": "ISC",
   "dependencies": {
+    "async": "^1.5.2",
     "body-parser": "^1.15.0",
     "dotenv-safe": "^2.3.1",
     "express": "^4.13.4",
-    "superagent": "^1.8.3"
+    "request": "^2.72.0"
   }
 }
