--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "dotenv-safe": "^2.3.1",
     "express": "^4.13.4",
     "request": "^2.72.0"
+  },
+  "devDependencies": {
+    "debug": "^2.2.0"
   }
 }
