--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "async": "^1.5.2",
     "body-parser": "^1.15.0",
-    "dotenv-safe": "^2.3.1",
+    "dotenv": "^2.0.0",
     "express": "^4.13.4",
     "request": "^2.72.0"
   },
